fix nav-bar gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,7 +64,7 @@ body {
 background-color: #fff;
 font-family: 'Economica', sans-serif;
 font-size: 18px;
-padding-top: 140px;
+padding-top: 70px;
 -moz-transition: padding-top .9s ease;
 -o-transition: padding-top .9s ease;
 -webkit-transition: padding-top .9s ease;
@@ -333,7 +333,7 @@ height: 650px;
 padding: 0;
 }
 section.hero.segment-B {
-background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.5)), url("../images/10.png");
+background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.2)), url("../images/10.png");
 height: 650px;
 }
 div.projectz {
